Updated attached cv file

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </p>
                     <br>
                     <p>When I'm not working, I would like to travel with my friends, playing cricket, watching films as well as studying new things related to my field.</p>
-                    <a href="jayanihettiarachchiNew.cv.pdf">Download CV</a>
+                    <a href="jayanihettiarachchi.cv.pdf">Download CV</a>
                 </div>
             </div>
         </div>
